Change App Name

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "header": {
-    "title": "Hal24K",
-    "subtitle": "Music"
+    "title": "SoundSniff",
+    "subtitle": ""
   },
   "theme": {
     "dark": "Dark Mode",
